Fix schedule margins and padding on smaller screens
At some point the other changes I've made had a side effect of extending
the margins of the schedule past the viewing area, creating an
undesirable horizontal scrollbar on smaller screens.  Fix it by making
margin and padding adjustments in schedule classes and by sometimes
disabling the hover scaling and shadow.

--- a/themes/eventre-hugo/assets/scss/pages/_home.scss
+++ b/themes/eventre-hugo/assets/scss/pages/_home.scss
@@ -323,7 +323,22 @@
 		padding-left: 0px;
 		padding-right: 0px;
 		@include desktop-sm {
-			max-width: 960px;
+			max-width: 991px;
+		}
+		.row{
+			margin-left: 0px;
+			margin-right: 0px;
+			.col-12{
+				padding-left: 0px;
+				padding-right: 0px;
+				.section-title{
+					padding-left: 15px;
+					padding-right: 15px;
+				}
+				.section-contents{
+					display: none;
+				}
+			}
 		}
 	}
 	.schedule-tab{
@@ -511,6 +526,10 @@
 					&:hover{
 						box-shadow: 0px 0px 30px 0px rgba(11, 29, 66, 0.15);
 						transform: scale(1.01);
+						@include desktop-sm {
+							box-shadow: none;
+							transform: none;
+						}
 					}
 				}
 			}
